--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
 
   sql-server-db:
     container_name: sql-server-db
-    image: microsoft/mssql-server-linux:2017-latest
+    image: mcr.microsoft.com/mssql/server:2017-latest
     ports:
       - "1433:1433"
     environment:
       SA_PASSWORD: "admin"
-      ACCEPT_EULA: "Y"
+      ACCEPT_EULA: "Strong_Password_Admin123!"
